[project]
name = "skin-cancer-detection"
version = "0.1.0"
description = ""
authors = [
    {name = "Emmanuel Osabutey",email = "tettehosabutey49@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
